Edited wiki page SdkTutorial through web user interface.

--- a/wiki/SdkTutorial.wiki
+++ b/wiki/SdkTutorial.wiki
@@ -112,9 +112,9 @@ All callbacks are called from either the Dispatch Thread or from your own thread
 There are methods in API that work completely locally. For example {{{JavascriptVm.getVersion()}}} will simply return a field. Other methods create requests, send them over wire to !JavaScript VM and wait for the response that should (hopefully) come.
 This latter kind of methods could be implemented in 2 styles. In SDK you will find example of both styles:
 
-1. *Blocking (Synchronous).* The method conveniently returns result to caller. For example http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JsObject.html#getProperties() JsObject.getProperties()] works like this. What may be inconvenient is that you have  to wait for a result, which means that your thread is blocked for the time of entire operation. So several simultaneous operations you will need several threads. Plus you cannot call this methods from SDK callbacks and listeners, because you would stop the Dispatch Thread forever.
+1. *Blocking (Synchronous).* The method conveniently returns result to caller. For example [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JsObject.html#getProperties() JsObject.getProperties()] works like this. What may be inconvenient is that you have  to wait for a result, which means that your thread is blocked for the time of entire operation. So several simultaneous operations you will need several threads. Plus you cannot call this methods from SDK callbacks and listeners, because you would stop the Dispatch Thread forever.
 
-2. *Asynchronous (Non-blocking).* The method doesn't return result. Instead it starts work in some way (for example sends the corresponding request) and returns control to you. You have to provide a callback that will be notified some time in the future when result is there. This is more flexible comparing to Blocking approach, but is obviously less useful. E.g. see [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JavascriptVm.html#listBreakpoints(org.chromium.sdk.JavascriptVm.ListBreakpointsCallback, org.chromium.sdk.SyncCallback) JavascriptVm.listBreakpoints].
+2. *Asynchronous (Non-blocking).* The method doesn't return result. Instead it starts work in some way (for example sends the corresponding request) and returns control to you. You have to provide a callback that will be notified some time in the future when result is there. This is more flexible comparing to Blocking approach, but is obviously less useful. E.g. see [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JavascriptVm.html#listBreakpoints(org.chromium.sdk.JavascriptVm.ListBreakpointsCallback,%20org.chromium.sdk.SyncCallback) JavascriptVm.listBreakpoints].
 
 SDK combines both approaches optimized for the typical use cases: some methods are blocking, some asynchronous. Some methods come in 2 styles, like in [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/org/chromium/sdk/JsEvaluateContext.html JsEvaluateContext].
 
