Edited wiki page Release_0_3_0 through web user interface.

--- a/wiki/Release_0_3_0.wiki
+++ b/wiki/Release_0_3_0.wiki
@@ -1,6 +1,6 @@
-#summary upcoming release 0.3.0 notes
+#summary release 0.3.0 notes
 
-=Google Chrome Developer Tools for Java. Upcoming Release 0.3.0.=
+=Google Chrome Developer Tools for Java. Release 0.3.0.=
 
 This release succeeds the [Release_0_2_2 release 0.2.2].
 
