Edited wiki page SdkTutorial through web user interface.

--- a/wiki/SdkTutorial.wiki
+++ b/wiki/SdkTutorial.wiki
@@ -11,11 +11,11 @@
 
 SDK is a standalone Java library. It comes as a set of .jar files or as an Eclipse plugins. As of [Release_0_3_0 0.3.0 version] it supports [ChromeDevToolsProtocol 'DevTools' protocol], native V8 protocol and [WIP WebKit Remote Debugging Protocol]. They all are implemented with the common API and differs only in attach interfaces.
 
-==Javadocs==
+!WebKit Remote Debugging Protocol support is a new subproject called here “WIP” (stands historically for !WebInspector Protocol). Several versions of WIP implementation are deployed simultaneously in modules called Wip Backends. Each of them corresponds to a particular version of !WebKit Remote Debugging Protocol (see details in [Release_0_3_0 release notes]). As of 0.3.0 it is user's responsibility to choose the correct backend. 
+
+===Javadocs===
 Generated documentation for the last release is available
 [http://chromedevtools.googlecode.com/svn/trunk/plugins/org.chromium.sdk/javadocs/index.html here].
-
-!WebKit Remote Debugging Protocol support is a new subproject called here “WIP” (stands historically for !WebInspector Protocol). Several versions of WIP implementation are deployed simultaneously in modules called Wip Backends. Each of them corresponds to a particular version of !WebKit Remote Debugging Protocol (see details in [Release_0_3_0 release notes]). As of 0.3.0 it is user's responsibility to choose the correct backend. 
 
 ==Getting started==
   # *Eclipse framework.* Install "!ChromeDevTools SDK" and "!ChromeDevTools SDK WIP Backends" features or manually install all org.chromium.sdk`*` packages.
