Edited wiki page HowToReportProblem through web user interface.

--- a/wiki/HowToReportProblem.wiki
+++ b/wiki/HowToReportProblem.wiki
@@ -4,7 +4,7 @@
 If you got a problem with the project, don't hesitate to report it. The chances are we might be unaware of the issue since there are a number of protocol/platform versions.
 
 ==Where?==
-What seems a certain bug should go straight to [http:issues Issues]. More questionable issues could be reported and discussed in the dedicated group (one need to join a group first).
+What seems a certain bug should go straight to [http:../issues Issues]. More questionable issues could be reported and discussed in the dedicated group (one need to join a group first).
 ==What?==
 Like usual, we will need information to reproduce the problem. The most valuable item is usually an *exception stacktrace*. Note that Eclipse may only display something like “Internal error” and nothing more. In this case you the corresponding stacktrace could be found manually either
   * in “Error Log” view (preinstalled in most Eclipse configurations): Window | Show View | Other → General → Error Log, or
