Edited wiki page HowToReportProblem through web user interface.

--- a/wiki/HowToReportProblem.wiki
+++ b/wiki/HowToReportProblem.wiki
@@ -4,14 +4,14 @@
 If you got a problem with the project, don't hesitate to report it. The chances are we might be unaware of the issue since there are quite a number of protocol/platform versions.
 
 ==Where?==
-What seems a certain bug should go straight to [http:../issues Issues]. More questionable issues could be reported and discussed in the [http://groups.google.com/group/chromedevtools-dev dedicated group] (one will need to join a group first).
+What seems a certain bug should go straight to [http:../issues Issues]. More questionable issues could be reported and discussed in the [http://groups.google.com/group/chromedevtools-dev dedicated group] (you will need to join the group first).
 
 ==What?==
-Like usual we will need information to reproduce the problem. The most valuable item is usually an *exception stacktrace*. Note that Eclipse may only display something like “Internal error” and nothing more. In this case the corresponding stacktrace could be found manually either
-  * in “Error Log” view (preinstalled in most Eclipse configurations): Window | Show View | Other → General → Error Log, or
-  * in Eclipse log file {{{.metadata/.log}}} that kept under your workspace directory.
+As usual, we need some information to reproduce the problem. The most valuable item is an *exception stacktrace*. Note that Eclipse may only display something like “Internal error” and nothing more. In this case the corresponding stacktrace could be found manually either
+  * in the “Error Log” view (preinstalled in most Eclipse configurations): Window | Show View | Other → General → Error Log, or
+  * in the Eclipse log file {{{.metadata/.log}}} found below your workspace directory.
 
-Other helping information is:
+Other helpful data points you can provide are:
   * !ChromeDevTools version.
-  * Protocol being used: [ChromeDevToolsProtocol old Chrome protocol], [WIP WebKit Remote Debugging Protocol (WIP)], Standalone connection.
-  * Name and version of your debuggee: Google Chrome, Chromium, Node.JS etc.
+  * Protocol used: [ChromeDevToolsProtocol old Chrome protocol], [WIP WebKit Remote Debugging Protocol (WIP)], Standalone connection.
+  * Name and version of your debuggee: Google Chrome, Chromium, Node.JS, etc.
