--- a/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
+++ b/trunk/plugins/org.chromium.debug.ui/src/org/chromium/debug/ui/launcher/messages.properties
@@ -16,5 +16,18 @@ ChromiumRemoteTab_FILE_PATH=plain file path
 ChromiumRemoteTab_InvalidPortNumberError=Invalid port number
 ChromiumRemoteTab_LOOKUP_GROUP_TITLE=Source look-up method for workspace files
 ChromiumRemoteTab_URL=URL
+DevToolsProtocolDeprecationTab_CONFIGURATION_NAME_SUFFIX=\ WIP
+DevToolsProtocolDeprecationTab_COPY_LAUNCH_CONFIGURATION=Copy Launch Configuration
+DevToolsProtocolDeprecationTab_MAIN_TEXT=This launch configuration uses "ChromeDevTools Protocol". \
+    However this protocol became deprecated in Chrome \
+    version 17 (17.0.950.*, developer build \#111559). "WebKit Remote Debugging Protocol" should be used instead. \
+    A corresponding launch configuration type is called "{0}" here.\n\nTo save your current configuration as the new type, \
+    press 'Copy' button below.\n\nNote that Google Chrome/Chromium browser should be started with a different \
+    command-line option:\n      --remote-debugging-port=<port number>\n
+DevToolsProtocolDeprecationTab_NEW_PROTOCOL=\ \ \ \ - new <a>WebKit Remote Debugging Protocol</a> (wiki page),
+DevToolsProtocolDeprecationTab_OLD_PROTOCOL=\ \ \ \ - old <a>ChromeDevTools protocol</a> (wiki page),
+DevToolsProtocolDeprecationTab_PROJECT_SITE=\ \ \ \ - <a>project site</a>.
+DevToolsProtocolDeprecationTab_SEE_ALSO=See also:
+DevToolsProtocolDeprecationTab_TITLE=Deprecation
 # note that this string is a part of the hidden filename, so translate with care
 LaunchType_LogConsoleLaunchName=chromedevtools-logger
